Quick fix to make site work on mobile (works very poorly)

--- a/client/sv-skyveri.css
+++ b/client/sv-skyveri.css
@@ -2,11 +2,16 @@
 
 html {
   height: 100%;
+  max-height: 2040px;
   width: 100%;
   overflow: hidden;
 }
 
 body {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 22px;
